--- a/css/stylesmobile.css
+++ b/css/stylesmobile.css
@@ -27,6 +27,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 5%;
+    padding-bottom: 0px;
 }
 
 .logo {
