--- a/css/stylesmobile.css
+++ b/css/stylesmobile.css
@@ -26,7 +26,14 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 5%;
+    padding: 30px 3%;
+    padding-bottom: 0px;
+}
+
+.mobile_div_nav{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
     padding-bottom: 0px;
 }
 
@@ -50,8 +57,6 @@ header {
 .nav_links li a:hover {
     color: #0088a9;
 }
-
-
 
 .introduction_banner {
     background: url(https://media.istockphoto.com/id/1029949176/photo/grunge-flag-of-canada.jpg?s=612x612&w=0&k=20&c=KCjQfkSoUAyB4wlxm7VxKTrJc-Dz8wYOS1nT51iFNvg=);
